WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208113
REGRESSION (
r248481
): drag animation of a link starts from the incorrect location
https://bugs.webkit.org/show_bug.cgi?id=208113
Summary
REGRESSION (r248481): drag animation of a link starts from the incorrect loca...
Wenson Hsieh
Reported
2020-02-23 14:40:05 PST
<
rdar://problem/59448696
>
Attachments
Patch
(12.55 KB, patch)
2020-02-23 15:44 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-02-23 15:44:15 PST
Created
attachment 391502
[details]
Patch
WebKit Commit Bot
Comment 2
2020-02-24 10:05:25 PST
Comment on
attachment 391502
[details]
Patch Clearing flags on attachment: 391502 Committed
r257214
: <
https://trac.webkit.org/changeset/257214
>
WebKit Commit Bot
Comment 3
2020-02-24 10:05:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug